Added icons! Finished sorting functions and added images and links

--- a/components/sass/style.sass
+++ b/components/sass/style.sass
@@ -1,2 +1,12 @@
+@function font-path($path)
+  @return $path
+
+
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-compass"
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-sprockets"
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
+
+
+.user-image
+    max-width: 50px
+    margin-right: 10px
