Added styling for table, aligning the text. Added header and footer

--- a/components/sass/style.sass
+++ b/components/sass/style.sass
@@ -9,4 +9,9 @@
 
 .user-image
     max-width: 50px
+    max-height: 50px
     margin-right: 10px
+
+.table > tbody > tr > td
+     vertical-align: middle
+     padding-left: 25px
