--- a/components/sass/style.sass
+++ b/components/sass/style.sass
@@ -6,6 +6,13 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-sprockets"
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
 
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed')
+
+body
+    font-family: 'Fira Sans Condensed', sans-serif
+
+h1
+    margin-bottom: 20px
 
 .user-image
     max-width: 50px
